# bluesdp

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  public.rs
src/codec/: continuation.rs  descriptor.rs  element.rs  encode.rs  extract.rs  mod.rs  pdu_header.rs  response.rs
src/transport/: connect.rs  live.rs  mod.rs  session.rs  socket.rs
tests/fixtures/: README.md  browse_page0_request.hex  browse_page0_response.hex  browse_page1_request.hex  browse_page1_response.hex  browse_page2_request.hex  browse_page2_response.hex  browse_page3_request.hex  browse_page3_response.hex  browse_page4_request.hex  browse_page4_response.hex  browse_page5_request.hex  browse_page5_response.hex  browse_page6_request.hex  browse_page6_response.hex  browse_page7_request.hex  browse_page7_response.hex  map_request.hex  map_response.hex  pbap_request.hex  pbap_response.hex
